--- a/webhome-3/pacture/OVEN.html
+++ b/webhome-3/pacture/OVEN.html
@@ -86,24 +86,7 @@
         <p>リンクから買って頂けるとものすごく嬉しいので是非お願いします！</p>
         <p>ご覧頂きありがとうございました！</p>
         <h2 id="re-arti">関連記事</h2>
-        <div class="arti-list">
-          <div class="arti-1">
-            <div><img src="../img/sen.jpeg"></div>
-            <div><h1><a href="cleaner.html">おすすめ扇風機5選!!!</a></h1></div>
-          </div>
-          <div class="arti-1">
-            <div><img src="../img/alcohol.jpg"></div>
-            <div><h1><a href="cleaner.html">おすすめウイスキー5選!!!</a></h1></div>
-          </div>
-          <div class="arti-1">
-            <div><img src="../img/movie1/samune1.jpg"></div>
-            <div><h1><a href="cleaner.html">おすすめ映画5選!!!</a></h1></div>
-          </div>
-          <div class="arti-1">
-            <div><img src="../img/movie1/samune2.jpg"></div>
-            <div><h1><a href="cleaner.html">おすすめ映画5選第2弾!!!</a></h1></div>
-          </div>
-        </div> 
+        <iframe class="relate" src="relate.html" scrolling="no" frameborder="no"></iframe>
       </div>
       <div class="right">
         <iframe class="ri-i" src="rightmenu.html" scrolling="no" frameborder="no"></iframe>
