--- a/webhome-3/pacture/fan.html
+++ b/webhome-3/pacture/fan.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="../css_folder/article.css">
+        <link rel="stylesheet" href="../css_folder/ad.css">
         <title>【2023年版】おすすめの手軽に持ち運べる省エネ扇風機5選!</title>
         <meta name="description" content="エアコン代を節約したい！熱中症対策をしたい！などの方に向けておすすめの商品を紹介していきます！">
         <meta name="keywords" content="扇風機, 夏, 電気代, 節約, エアコン, クーラー, 暑い, 涼しく">
