--- a/webhome-3/pacture/inquiry.html
+++ b/webhome-3/pacture/inquiry.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="../css_folder/inquiry.css"><!--css名変える-->
+        <link rel="stylesheet" href="../css_folder/inquiry.css">
+        <link rel="stylesheet" href="../css_folder/ad.css">
         <title>お問い合わせフォーム</title><!--1.タイトル-->
         <meta name="description" content="お問い合わせフォームです"><!--2.説明文-->
         <meta name="keywords" content="お問い合わせフォーム"><!--3.キーワード-->
