--- a/webhome-3/pacture/relate.html
+++ b/webhome-3/pacture/relate.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="../css_folder/article.css"><!--css名変える-->
+    <link rel="stylesheet" href="../css_folder/article.css">
+    <link rel="stylesheet" href="../css_folder/ad.css">
     <title>関連記事</title><!--1.タイトル-->
     <meta name="description" content="関連記事"><!--2.説明文-->
     <meta name="keywords" content="記事"><!--3.キーワード-->
