--- a/webhome-3/pacture/rightmenu.html
+++ b/webhome-3/pacture/rightmenu.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="../css_folder/rightmenu.css">
+        <link rel="stylesheet" href="../css_folder/ad.css">
   </head>
   <body>
     <div class="rightside">
