--- a/webhome-3/pacture/washing.html
+++ b/webhome-3/pacture/washing.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="../css_folder/article.css"><!--css名変える-->
+        <link rel="stylesheet" href="../css_folder/article.css">
+        <link rel="stylesheet" href="../css_folder/ad.css">
         <title>【2023年版】洗濯機で何を買えばいいのかわからない人は必見!!</title><!--1.タイトル-->
         <meta name="description" content="一人暮らしや引越しで洗濯機を新調するとき、買うべき洗濯機が分からない人に向けて、洗濯機のことを1から10まで説明します！"><!--2.説明文-->
         <meta name="keywords" content="洗濯, 洗濯機, 夏, 汗, 清潔, 布団"><!--3.キーワード-->
