--- a/webhome-3/pacture/ANIME.html
+++ b/webhome-3/pacture/ANIME.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="../css_folder/category.css">
+        <link rel="stylesheet" href="../css_folder/ad.css">
         <title>日常・趣味・便利グッズ紹介サイト</title>
         <meta name="description" content="今流行りの映画やアニメ、便利な日用品、受験勉強用の教材について紹介しています！">
         <meta name="keywords" content="映画, アニメ, 日用品, 参考書, 日常, 参政党">
