--- a/webhome-3/pacture/footer.html
+++ b/webhome-3/pacture/footer.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="../css_folder/footer.css">
+        <link rel="stylesheet" href="../css_folder/ad.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
         <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
