--- a/webhome-3/pacture/logo.html
+++ b/webhome-3/pacture/logo.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="../css_folder/article.css">
+        <link rel="stylesheet" href="../css_folder/ad.css">
         <title>ロゴ / バナー</title>
         <meta name="description" content="当社のロゴ / バナーについて">
         <meta name="keywords" content="ロゴ, バナー, logo, banner">
