--- a/webhome-3/pacture/movie4.html
+++ b/webhome-3/pacture/movie4.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="../css_folder/article.css"><!--css名変える-->
+        <link rel="stylesheet" href="../css_folder/article.css">
+        <link rel="stylesheet" href="../css_folder/ad.css">
         <title>おすすめ映画5選 !!!</title><!--1.タイトル-->
         <meta name="description" content="おすすめ映画を5つご紹介します。"><!--2.説明文-->
         <meta name="keywords" content="映画, 夏, 冬"><!--3.キーワード-->
