--- a/webhome-3/pacture/OVEN.html
+++ b/webhome-3/pacture/OVEN.html
@@ -88,6 +88,7 @@
         <p>ご覧頂きありがとうございました！</p>
         <h2 id="re-arti">関連記事</h2>
         <iframe class="relate" src="relate.html" scrolling="no" frameborder="no"></iframe>
+        <iframe class="relate-mobile" src="relate-mobile.html" scrolling="no" frameborder="no"></iframe>
       </div>
       <div class="right">
         <iframe class="ri-i" src="rightmenu.html" scrolling="no" frameborder="no"></iframe>
