--- a/webhome-3/pacture/movie3.html
+++ b/webhome-3/pacture/movie3.html
@@ -134,7 +134,8 @@
                 <img src="../img/movie1/samune2.jpg" class="samune">
                 <p>以上、【週末に見るべきおすすめ映画５選】でした。</p>
                 <h2 id="re-arti">関連記事</h2>
-                <iframe class="relate" src="relate.html" scrolling="no" frameborder="no"></iframe>                   
+                <iframe class="relate" src="relate.html" scrolling="no" frameborder="no"></iframe>   
+                <iframe class="relate-mobile" src="relate-mobile.html" scrolling="no" frameborder="no"></iframe>                
                 </div>
             </div>
             <div class="right">
