--- a/webhome-3/pacture/washing.html
+++ b/webhome-3/pacture/washing.html
@@ -185,9 +185,9 @@
                 <p>この記事を読んで皆さんがさらに良い、自分に合った最高の洗濯機を見つけられることができることを願っています！</p>
                 <p>是非参考にしてくださいね！！</p>
                 <p>最後まで見てくださりありがとうございました！</p>
-                <img class="free_img" src="#">
                 <h2 id="re-arti">関連記事</h2>
                 <iframe class="relate" src="relate.html" scrolling="no" frameborder="no"></iframe>
+                <iframe class="relate-mobile" src="relate-mobile.html" scrolling="no" frameborder="no"></iframe>
             </div>
             <div class="right">
                 <iframe class="ri-i" src="rightmenu.html" scrolling="no" frameborder="no"></iframe>
