--- a/webhome-3/pacture/DRR.html
+++ b/webhome-3/pacture/DRR.html
@@ -165,6 +165,7 @@
                 <p>では、また次の記事でお会いしましょう！！</p>
                 <h2 id="re-arti">関連記事</h2>
                 <iframe class="relate" src="relate.html" scrolling="no" frameborder="no"></iframe>
+                <iframe class="relate-mobile" src="relate-mobile.html" scrolling="no" frameborder="no"></iframe>
             </div>
             <div class="right">
                 <iframe class="ri-i" src="rightmenu.html" scrolling="no" frameborder="no"></iframe>
