--- a/webhome-3/pacture/movie1.html
+++ b/webhome-3/pacture/movie1.html
@@ -136,6 +136,7 @@
                 <p>以上、【週末に見るべきおすすめ映画５選】でした。</p>
                 <h2 id="re-arti">関連記事</h2>
                 <iframe class="relate" src="relate.html" scrolling="no" frameborder="no"></iframe>
+                <iframe class="relate-mobile" src="relate-mobile.html" scrolling="no" frameborder="no"></iframe>
             </div>
             <div class="right">
                 <iframe class="ri-i" src="rightmenu.html" scrolling="no" frameborder="no"></iframe>
