--- a/webhome-3/pacture/movie2.html
+++ b/webhome-3/pacture/movie2.html
@@ -125,6 +125,7 @@
                 <p>次回の記事もお楽しみに！！</p>
                 <h2 id="re-arti">関連記事</h2>
                 <iframe class="relate" src="relate.html" scrolling="no" frameborder="no"></iframe>
+                <iframe class="relate-mobile" src="relate-mobile.html" scrolling="no" frameborder="no"></iframe>
             </div>
             <div class="right">
                 <iframe class="ri-i" src="rightmenu.html" scrolling="no" frameborder="no"></iframe>
