--- a/webhome-3/pacture/whisky.html
+++ b/webhome-3/pacture/whisky.html
@@ -199,6 +199,7 @@
                 <br>
                 <h2 id="re-arti">関連記事</h2>
                 <iframe class="relate" src="relate.html" scrolling="no" frameborder="no"></iframe>
+                <iframe class="relate-mobile" src="relate-mobile.html" scrolling="no" frameborder="no"></iframe>
             </div>
             <div class="right">
                 <iframe class="ri-i" src="rightmenu.html" scrolling="no" frameborder="no"></iframe>
