--- a/webhome-3/pacture/relate-mobile.html
+++ b/webhome-3/pacture/relate-mobile.html
@@ -14,7 +14,7 @@
     <script type="module" src="../js_folder/relate.js"></script>
 </head>
 <body>
-    <div class="ad-maxwidth">
+    <div class="ad-minwidth">
         <a href="https://px.a8.net/svt/ejp?a8mat=3TFBPJ+K8RCI+348+1BWYRL" rel="nofollow">
             <img border="0" width="120" height="60" alt="" src="https://www26.a8.net/svt/bgt?aid=230822407034&wid=001&eno=01&mid=s00000000404008048000&mc=1"></a>
             <img border="0" width="1" height="1" src="https://www18.a8.net/0.gif?a8mat=3TFBPJ+K8RCI+348+1BWYRL" alt="">
