--- a/webhome-3/pacture/relate.html
+++ b/webhome-3/pacture/relate.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="../css_folder/relate.css">
-    <link rel="stylesheet" href="../css_folder/ad.css">
     <title>関連記事</title><!--1.タイトル-->
     <meta name="description" content="関連記事"><!--2.説明文-->
     <meta name="keywords" content="記事"><!--3.キーワード-->
     <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
     <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
-    <script type="module" src="../js_folder/relate.js"></script>
+    <script src="../js_folder/relate.js"></script>
 </head>
 <body>
     <div class="ad-maxwidth">
