--- a/webhome-3/pacture/search.html
+++ b/webhome-3/pacture/search.html
@@ -11,7 +11,7 @@
         <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
         <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
         <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
-        <script type="module" src="../js_folder/search.js"></script>
+        <script src="../js_folder/search.js"></script>
     </head>
     <body>
     <div class="wrap">
@@ -28,7 +28,6 @@
                 <div id="results"></div>
                 <h2 id="re-arti">関連記事</h2>
                 <iframe class="relate" src="relate.html" scrolling="no" frameborder="no"></iframe>
-                <iframe class="relate-mobile" src="relate-mobile.html" scrolling="no" frameborder="no"></iframe>
             </div>
             <div class="right">
                 <iframe class="ri-i" src="rightmenu.html" scrolling="no" frameborder="no"></iframe>
