--- a/webhome-3/pacture/relate-mobile.html
+++ b/webhome-3/pacture/relate-mobile.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
     <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
-    <script type="module" src="../js_folder/relate.js"></script>
+    <script src="../js_folder/relate.js"></script>
 </head>
 <body>
     <div class="ad-minwidth">
