--- a/webhome-3/index.html
+++ b/webhome-3/index.html
@@ -10,6 +10,7 @@
         <link rel="shortcut icon" href="img/Pac.ico" type="image/x-icon">
         <link rel="apple-touch-icon" href="img/Pac.png" sizes="180x180">
         <link rel="icon" type="image/png" href="img/Pac.png" sizes="192x192">
+        <script src="js_folder/index.js"></script>
     </head>
     <body>
     <div class="wrap">
@@ -35,40 +36,7 @@
                 <iframe src="pacture/leftmenu.html" scrolling="no" frameborder="no"></iframe>
             </div>
             <div class="arti-list">
-                <a href="https://px.a8.net/svt/ejp?a8mat=3TF708+C3TBLE+348+6O9OX" rel="nofollow">
-                <img border="0" width="468" height="60" alt="" src="https://www24.a8.net/svt/bgt?aid=230816312732&wid=001&eno=01&mid=s00000000404001121000&mc=1"></a>
-                <img border="0" width="1" height="1" src="https://www14.a8.net/0.gif?a8mat=3TF708+C3TBLE+348+6O9OX" alt="">
-                <div class="arti-1">
-                    <div><img src="img/sen.jpeg"></div>
-                    <div><h1><a href="pacture/fan.html">おすすめ扇風機10選!!!</a></h1></div>
-                </div>
-                <div class="arti-1">
-                    <div><img src="img/uiui.jpg"></div>
-                    <div><h1><a href="pacture/whisky.html">おすすめウイスキー5選!!!</a></h1></div>
-                </div>
-                <div class="arti-1">
-                    <div><img src="img/movie1/samune1.jpg"></div>
-                    <div><h1><a href="pacture/movie1.html">おすすめ映画5選!!!</a></h1></div>
-                </div>
-                <a href="https://px.a8.net/svt/ejp?a8mat=3T22ZC+2HWH4I+50+2HK8J5" rel="nofollow">
-                    <img border="0" width="350" height="80" alt="" src="https://www28.a8.net/svt/bgt?aid=230204568151&wid=001&eno=01&mid=s00000000018015043000&mc=1"></a>
-                    <img border="0" width="1" height="1" src="https://www11.a8.net/0.gif?a8mat=3T22ZC+2HWH4I+50+2HK8J5" alt="">
-                    <a href="https://px.a8.net/svt/ejp?a8mat=3TF5FP+2VLG1E+3D3Q+TUO9T" rel="nofollow">
-                    <img border="0" width="100" height="60" alt="" src="https://www22.a8.net/svt/bgt?aid=230814277174&wid=001&eno=01&mid=s00000015695005014000&mc=1"></a>
-                    <img border="0" width="1" height="1" src="https://www15.a8.net/0.gif?a8mat=3TF5FP+2VLG1E+3D3Q+TUO9T" alt="">
-                <div class="arti-1">
-                    <div><img src="img/movie1/samune2.jpg"></div>
-                    <div><h1><a href="pacture/movie2.html">おすすめ映画5選第2弾!!!</a></h1></div>
-                </div>
-                <div class="arti-1">
-                    <div><img src="img/sen.jpg"></div>
-                    <div><h1><a href="pacture/washing.html">おすすめ洗濯機5選!!!</a></h1></div>
-                </div>
-                <div class="ad-1">
-                    <a href="https://px.a8.net/svt/ejp?a8mat=3TF5FO+DW44XE+51YA+5ZEMP" rel="nofollow">
-                    <img border="0" width="468" height="60" alt="" src="https://www20.a8.net/svt/bgt?aid=230814276840&wid=001&eno=01&mid=s00000023581001005000&mc=1"></a>
-                    <img border="0" width="1" height="1" src="https://www19.a8.net/0.gif?a8mat=3TF5FO+DW44XE+51YA+5ZEMP" alt="">
-                </div>
+                <div id="indexjs"></div>
             </div>
             <div class="right">
                 <iframe class="ri-i" src="pacture/rightmenu.html" scrolling="no" frameborder="no"></iframe>
