--- a/webhome-3/pacture/rightmenu.html
+++ b/webhome-3/pacture/rightmenu.html
@@ -9,22 +9,28 @@
   <body>
     <div class="rightside">
       <div class="popular-arti">
-          <h1>人気ランキングTOP10!!!</h1>
-          <div class="rank">
-              <img src="../img/rank1.png">
-              <img src="../img/sen.jpeg">
-              <a href="fan.html" target="_top">おすすめ扇風機5選!!!</a>
-          </div>
-          <div class="rank">
-              <img src="../img/rank2.png">
-              <img src="../img/alcohol.jpg">
-              <a href="whisky.html"target="_top" >おすすめウイスキー5選!!!</a>
-          </div>
-          <div class="rank">
-              <img src="../img/rank3.png">
-              <img src="../img/movie1/samune1.jpg">
-              <a href="movie1.html" target="_top">おすすめ映画5選!!!</a>
-          </div>
+            <h1>人気ランキングTOP10!!!</h1>
+            <div class="rank">
+                <div class="rank-img">
+                    <img src="../img/rank1.png">
+                    <img src="../img/sen.jpeg">
+                </div>
+                <p><a href="fan.html" target="_top">おすすめ扇風機5選!!!</a></p>
+            </div>
+            <div class="rank">
+                <div class="rank-img">
+                    <img src="../img/rank2.png">
+                    <img src="../img/alcohol.jpg">
+                </div>
+                <p><a href="whisky.html"target="_top" >おすすめウイスキー5選!!!</a></p>
+            </div>
+            <div class="rank">
+                <div class="rank-img">
+                    <img src="../img/rank3.png">
+                    <img src="../img/movie1/samune1.jpg">
+                </div>
+                <p><a href="movie1.html" target="_top">おすすめ映画5選!!!</a></p>
+            </div>
       </div>
       <div class="ad-3">
             <a href="https://px.a8.net/svt/ejp?a8mat=3T22ZC+2HWH4I+50+2HT0W1" rel="nofollow">
