--- a/pacture/whisky.html
+++ b/pacture/whisky.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="../css_folder/article.css">
         <link rel="stylesheet" href="../css_folder/ad.css">
-        <title>【飲みやすい!】初心者におすすめの2000円代ウイスキー 5選</title><!--1.タイトル-->
+        <title>【飲みやすい!】初心者におすすめの2000円台ウイスキー 5選</title><!--1.タイトル-->
         <meta name="description" content="2023年最新! 初心者でも飲めるおすすめのウイスキーを5つ厳選しました! お酒を選ぶ時の参考にしてみてください!"><!--2.説明文-->
         <meta name="keywords" content="お酒, ウイスキー, アルコール, 20歳, 酒"><!--3.キーワード-->
         <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
@@ -22,7 +22,7 @@
                 <iframe src="leftmenu.html" scrolling="no" frameborder="no"></iframe>
             </div>
             <div class="arti">
-                <h1>【飲みやすい！】初心者におすすめの2000円代ウイスキー 5選</h1>
+                <h1>【飲みやすい!】初心者におすすめの2000円台ウイスキー 5選</h1>
                 <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/08/08</p>
                 <img src="../img/whi_samune.jpg"class="samune">
                 <p>※お酒は二十歳になってから。運転時、妊娠期などの飲酒も控えましょう。</p>
