camp.htmlのタイトルを付けた

--- a/pacture/camp.html
+++ b/pacture/camp.html
@@ -22,8 +22,8 @@
                 <iframe src="leftmenu.html" scrolling="no" frameborder="no"></iframe>
             </div>
             <div class="arti">
-                <h1>title</h1>
-                <a href="index.html"><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/**/△△</p>
+                <h1>秋におすすめのキャンプグッズを紹介!!!</h1>
+                <a href="index.html"><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2024/09/05</p>
                 <p>導入文</p>
                 <div class="table">
                     <h1>もくじ</h1>
