ad: 広告の更新
1. 広告を更新
2. ディレクトリ構成を更新

--- a/pacture/leftmenu.html
+++ b/pacture/leftmenu.html
@@ -14,20 +14,21 @@
             カテゴリー
         </h1>
         <ul>
-            <li><a href="ANIME.html" target="_top">アニメ<span class="count">(2)</span></a></li>
-            <li><a href="MOVIE.html" target="_top">映画・ドラマ<span class="count">(2)</span></a></li>
-            <li><a href="CONVENIENCE.html" target="_top">日用品<span class="count">(2)</span></a></li>
-            <li><a href="OTHERS.html" target="_top">その他<span class="count">(1)</span></a></li>
+            <li><a href="category/ANIME.html" target="_top">アニメ<span class="count">(2)</span></a></li>
+            <li><a href="category/MOVIE.html" target="_top">映画・ドラマ<span class="count">(2)</span></a></li>
+            <li><a href="category/CONVENIENCE.html" target="_top">日用品<span class="count">(2)</span></a></li>
+            <li><a href="category/CONVENIENCE.html" target="_top">勉強・受験<span class="count">(0)</span></a></li>
+            <li><a href="category/OTHERS.html" target="_top">その他<span class="count">(1)</span></a></li>
             <li><a href="../index.html" target="_top">ホームへ戻る</a></li>
         </ul>
     </div> 
     <div class="ad-2">
-        <a href="https://px.a8.net/svt/ejp?a8mat=3T22ZC+2HWH4I+50+2HQO0H" rel="nofollow">
-        <img border="0" width="160" height="600" alt="" src="https://www25.a8.net/svt/bgt?aid=230204568151&wid=001&eno=01&mid=s00000000018015073000&mc=1"></a>
-        <img border="0" width="1" height="1" src="https://www18.a8.net/0.gif?a8mat=3T22ZC+2HWH4I+50+2HQO0H" alt="">
-        <a href="https://px.a8.net/svt/ejp?a8mat=3TF708+C3TBLE+348+686ZL" rel="nofollow">
-        <img border="0" width="120" height="60" alt="" src="https://www25.a8.net/svt/bgt?aid=230816312732&wid=001&eno=01&mid=s00000000404001046000&mc=1"></a>
-        <img border="0" width="1" height="1" src="https://www18.a8.net/0.gif?a8mat=3TF708+C3TBLE+348+686ZL" alt="">
+        <a href="https://px.a8.net/svt/ejp?a8mat=3ZFHO0+B7NWXE+2EFO+67RK1" rel="nofollow">
+            <img border="0" width="160" height="600" alt="" src="https://www23.a8.net/svt/bgt?aid=240907824678&wid=001&eno=01&mid=s00000011202001044000&mc=1"></a>
+            <img border="0" width="1" height="1" src="https://www12.a8.net/0.gif?a8mat=3ZFHO0+B7NWXE+2EFO+67RK1" alt="">
+        <a href="https://px.a8.net/svt/ejp?a8mat=3ZFHO0+BIZ5F6+1OK+62ENL" rel="nofollow">
+            <img border="0" width="120" height="120" alt="" src="https://www20.a8.net/svt/bgt?aid=240907824697&wid=001&eno=01&mid=s00000000218001019000&mc=1"></a>
+            <img border="0" width="1" height="1" src="https://www17.a8.net/0.gif?a8mat=3ZFHO0+BIZ5F6+1OK+62ENL" alt="">
     </div>
   </div>
   </body>
