--- a/pacture/footer.html
+++ b/pacture/footer.html
@@ -18,9 +18,12 @@
               カテゴリー
           </h1>
           <ul>
-              <li><a href="MOVIE.html" target="_top">映画・ドラマ<span class="count">(0)</span></a></li>
-              <li><a href="CONVENIENCE.html" target="_top">日用品<span class="count">(2)</span></a></li>
-              <li><a href="OTHERS.html" target="_top">その他<span class="count">(0)</span></a></li>
+            <li><a href="category/ANIME.html" target="_top">アニメ<span class="count">(2)</span></a></li>
+            <li><a href="category/MOVIE.html" target="_top">映画・ドラマ<span class="count">(2)</span></a></li>
+            <li><a href="category/CONVENIENCE.html" target="_top">日用品<span class="count">(2)</span></a></li>
+            <li><a href="category/CONVENIENCE.html" target="_top">勉強・受験<span class="count">(0)</span></a></li>
+            <li><a href="category/OTHERS.html" target="_top">その他<span class="count">(1)</span></a></li>
+            <li><a href="../index.html" target="_top">ホームへ戻る</a></li>
           </ul>
       </div> 
   </div>
@@ -28,13 +31,13 @@
   <a href="https://twitter.com/a5272745637572" target="_blank"><i class="fa-brands fa-square-twitter" style="font-size:80px;"></i></a>
   <a href="https://www.instagram.com/nitizyobenri/" target="_blank"><i class="fa-brands fa-square-instagram" style="font-size:80px;"></i></a>
   <div class="menu2">
-      <a href="company.html" target="_top"><p>・運営会社</p></a>
-      <a href="private.html" target="_top"><p>・プライバシーポリシー</p></a>
-      <a href="inquiry.html" target="_top"><p>・お問い合わせ</p></a>
-      <a href="qa.html" target="_top"><p>・Q&A</p></a>
-      <a href="terms.html" target="_top"><p>・利用規約</p></a>
-      <a href="logo.html" target="_top"><p>・ロゴ/バナー</p></a>
-      <a href="ad.html" target="_top"><p>・広告掲載のご相談</p></a>
+      <a href="footer/company.html" target="_top"><p>・運営会社</p></a>
+      <a href="footer/private.html" target="_top"><p>・プライバシーポリシー</p></a>
+      <a href="footer/inquiry.html" target="_top"><p>・お問い合わせ</p></a>
+      <a href="footer/qa.html" target="_top"><p>・Q&A</p></a>
+      <a href="footer/terms.html" target="_top"><p>・利用規約</p></a>
+      <a href="footer/logo.html" target="_top"><p>・ロゴ/バナー</p></a>
+      <a href="footer/ad.html" target="_top"><p>・広告掲載のご相談</p></a>
   </div>
   <p>©; 2023. pacture</p>
   </body>
