--- a/pacture/footer/company.html
+++ b/pacture/footer/company.html
@@ -3,36 +3,36 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="../css_folder/article.css">
-        <link rel="stylesheet" href="../css_folder/ad.css">
+        <link rel="stylesheet" href="../../css_folder/article.css">
+        <link rel="stylesheet" href="../../css_folder/ad.css">
         <title>運営会社</title><!--1.タイトル-->
         <meta name="description" content="このサイトを運営しているものについて"><!--2.説明文-->
         <meta name="keywords" content="pacture, 運営会社"><!--3.キーワード-->
-        <link rel="shortcut icon" href="img\Pac.ico" type="image/x-icon">
-        <link rel="apple-touch-icon" href="img\Pac.png" sizes="180x180">
-        <link rel="icon" type="image/png" href="img\Pac.png" sizes="192x192">
+        <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
+        <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
     </head>
     <body>
     <div class="wrap">
         <header>
-            <iframe src="header.html" scrolling="no" frameborder="no" width="100%"></iframe>
+            <iframe src="../header.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </header>
         <div class="main-body">
             <div class="left">
-                <iframe src="leftmenu.html" scrolling="no" frameborder="no"></iframe>
+                <iframe src="../leftmenu.html" scrolling="no" frameborder="no"></iframe>
             </div>
             <div class="arti">
                 <h1>運営会社</h1>
-                <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/30</p>
+                <a href=../../index.html><img class="logo" src="../../img/Pac.png"></a><p class="open_day">公開日 2023/09/30</p>
                 <h2>この会社について</h2>
                 <p>作成中です</p>
             </div>
             <div class="right">
-                <iframe class="ri-i" src="rightmenu.html" scrolling="no" frameborder="no"></iframe>
+                <iframe class="ri-i" src="../rightmenu.html" scrolling="no" frameborder="no"></iframe>
             </div>
         </div>
         <footer>
-            <iframe src="footer.html" scrolling="no" frameborder="no" width="100%"></iframe>
+            <iframe src="../footer.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </footer>
     </div>
     </body>
