--- a/pacture/footer/private.html
+++ b/pacture/footer/private.html
@@ -3,27 +3,27 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="../css_folder/article.css">
-        <link rel="stylesheet" href="../css_folder/ad.css">
+        <link rel="stylesheet" href="../../css_folder/article.css">
+        <link rel="stylesheet" href="../../css_folder/ad.css">
         <title>プライバシーポリシー</title><!--1.タイトル-->
         <meta name="description" content="当サイトのプライバシーポリシーです"><!--2.説明文-->
         <meta name="keywords" content="プライバシーポリシー"><!--3.キーワード-->
-        <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
-        <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
-        <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
+        <link rel="shortcut icon" href="../../img/Pac.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="../../img/Pac.png" sizes="180x180">
+        <link rel="icon" type="image/png" href="../../img/Pac.png" sizes="192x192">
     </head>
     <body>
     <div class="wrap">
         <header>
-            <iframe src="header.html" scrolling="no" frameborder="no" width="100%"></iframe>
+            <iframe src="../header.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </header>
         <div class="main-body">
             <div class="left">
-                <iframe src="leftmenu.html" scrolling="no" frameborder="no"></iframe>
+                <iframe src="../leftmenu.html" scrolling="no" frameborder="no"></iframe>
             </div>
             <div class="arti">
                 <h1>プライバシーポリシー</h1>
-                <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/30</p>
+                <a href="../../index.html"><img class="logo" src="../../img/Pac.png"></a><p class="open_day">公開日 2023/09/30</p>
                 <h2 id="mo-1">【Pacture】 プライバシーポリシー</h2>
                 <p>Pacture（以下,「当社」といいます。）は,本ウェブサイト上で提供するサービス（以下,「本サービス」といいます。）における，ユーザーの個人情報の取扱いについて，以下のとおりプライバシーポリシー（以下，「本ポリシー」といいます。）を定めます。</p>
                 <h3 id="mo-2">第1条（個人情報）</h3>
@@ -107,11 +107,11 @@
                 </ul>
             </div>
             <div class="right">
-                <iframe class="ri-i" src="rightmenu.html" scrolling="no" frameborder="no"></iframe>
+                <iframe class="ri-i" src="../rightmenu.html" scrolling="no" frameborder="no"></iframe>
             </div>
         </div>
         <footer>
-            <iframe src="footer.html" scrolling="no" frameborder="no" width="100%"></iframe>
+            <iframe src="../footer.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </footer>
     </div>
     </body>
