--- a/pacture/footer/terms.html
+++ b/pacture/footer/terms.html
@@ -3,27 +3,27 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="../css_folder/article.css">
-        <link rel="stylesheet" href="../css_folder/ad.css">
+        <link rel="stylesheet" href="../../css_folder/article.css">
+        <link rel="stylesheet" href="../../css_folder/ad.css">
         <title>利用規約</title><!--1.タイトル-->
         <meta name="description" content="利用規約"><!--2.説明文-->
         <meta name="keywords" content="利用規約"><!--3.キーワード-->
-        <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
-        <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
-        <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
+        <link rel="shortcut icon" href="../../img/Pac.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="../../img/Pac.png" sizes="180x180">
+        <link rel="icon" type="image/png" href="../../img/Pac.png" sizes="192x192">
     </head>
     <body>
     <div class="wrap">
         <header>
-            <iframe src="header.html" scrolling="no" frameborder="no" width="100%"></iframe>
+            <iframe src="../header.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </header>
         <div class="main-body">
             <div class="left">
-                <iframe src="leftmenu.html" scrolling="no" frameborder="no"></iframe>
+                <iframe src="../leftmenu.html" scrolling="no" frameborder="no"></iframe>
             </div>
             <div class="arti">
                 <h1>利用規約</h1>
-                <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/26</p>
+                <a href="../../index.html"><img class="logo" src="../../img/Pac.png"></a><p class="open_day">公開日 2023/09/26</p>
                 <h2 id="mo-1">【Pacture】利用規約</h2>
                 <!--一つ目の項目--><!--小見出しはh3、その他はp-->
                 <p>この利用規約（以下,「本規約」といいます。）は, Pacture（以下, 「当社」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。</p>
@@ -136,11 +136,11 @@
                 <p class="end">以上</p>
             </div>
             <div class="right">
-                <iframe class="ri-i" src="rightmenu.html" scrolling="no" frameborder="no"></iframe>
+                <iframe class="ri-i" src="../rightmenu.html" scrolling="no" frameborder="no"></iframe>
             </div>
         </div>
         <footer>
-            <iframe src="footer.html" scrolling="no" frameborder="no" width="100%"></iframe>
+            <iframe src="../footer.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </footer>
     </div>
     </body>
