--- a/pacture/aki.html
+++ b/pacture/aki.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="../css_folder/article.css"><!--css名は変更しない-->
         <link rel="stylesheet" href="../css_folder/ad.css">
-        <title>title</title><!--1.タイトル-->
-        <meta name="description" content="sample"><!--2.説明文-->
+        <title>title</title><!--1.お彼岸　花のキューピットのお供え-->
+        <meta name="description" content="sample"><!--2.お彼岸の他にも49日やお盆や法事などにも使えるお供物！-->
         <meta name="keywords" content="sample"><!--3.キーワード-->
         <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
         <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
